# ceres

./: .gitignore  .yamllint.yml  AI_README.md  ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT_AND_TESTING.md  GEMINI.md  README.md  cov.sh  fix.sh  main.py  marker.sh  pre-commit.sh  pyproject.toml  rpt.sh
docs/: ARCHITECTURE.md  RULE_INTERPRETATIONS.md  TEST_CASE_ASSEMBLIES.md  TEST_CASE_SHIPS.md  accomodation.md  assemblies_and_parts.md  character-creation-rules.md  command-comms-sensors-countermeasures.md  customisation-handling.md  dragon-variant-status.md  plan-approval-testing.md  plan-career-entry-outcomes.md  plan-career-term-and-muster-out.md  plan-character-creation.md  plan-character-service.md  plan-event-and-pending-input-rethink.md  plan-gear-backed-robot-options.md  plan-homeworld-changes.md  plan-languages.md  plan-mechanism-domain-decoupling.md  plan-military-academy-commission-basic-training.md  plan-pdf-output.md  plan-remove-career-yaml.md  plan-remove-tl-classvar.md  plan-report-domain-decoupling.md  plan-robot-brains-as-computers.md  plan-robot-maker.md  plan-robot-manipulators.md  plan-robot-skills-as-character-skills.md  plan-ship-part-properties.md  plan-ship-sections.md  plan-sophonts.md  plan-source-specific-ship-rules.md  plan-term-unification.md  plan-test-restructure.md  plan-test-suite-improvements.md  remove-integrated-npc-autogeneration.md  solar-energy-systems-comparison.md  test-case-beagle.md  todo_maybe.md
docs/archive/: done_todos.md  plan-career-entry-outcomes.md  plan-career-term-and-muster-out.md  plan-character-creation.md  plan-mechanism-domain-decoupling.md  plan-pdf-output.md  plan-remove-career-yaml.md  plan-remove-tl-classvar.md  plan-report-domain-decoupling.md  plan-robot-brains-as-computers.md  plan-robot-maker.md  plan-robot-manipulators.md  plan-ship-part-properties.md  plan-term-unification.md  plan-test-restructure.md  remove-integrated-npc-autogeneration.md
docs/concepts/: allegiances.md  character-creation-architecture.md  character-creation.md  gear-and-equipment.md  robot-creation.md  ship-building.md  sophont_codes_in_sectors.json  sophonts.md  task-mechanics.md  vehicle-building.md  weapons.md
docs/context/: Ache.txt  Ahki.txt  Akti.txt  Amde.txt  Amdu.txt  Amun.txt  Annw.txt  Aphl.txt  Arms.txt  Arzu.txt  Atau.txt  Aver.txt  Bann.txt  Barx.txt  Beyo.txt  Bige.txt  Bigi.txt  Blac.txt  Blas.txt  Caes.txt  Cano.txt  Cela.txt  Cen2.txt  Chie.txt  Chti.txt  Cola.txt  Cor2.txt  Corr.txt  Cous.txt  Daib.txt  Dalc.txt  Dar2.txt  Dark.txt  Dats.txt  Deep.txt  Delp.txt  Dene.txt  Diam.txt  Dias.txt  Dria.txt  (+154 more)
examples/: pdf_typst.py  pdf_typst_dragon.py  ultralight_fighter.py
src/ceres/: __init__.py  armour.py  base.py  bridge.py  computer.py  crafts.py  crew.py  drives.py  expense.py  habitation.py  hull.py  parts.py  sensors.py  settings.py  shared.py  ship.py  spec.py  storage.py  systems.py  weapons.py
src/stuart/: __init__.py  html.py  tycho_html.py  tycho_pdf.py  tycho_view.py
src/tools/: discriminator_literal_audit.py  gen_robot_skills.py
src/tycho/: armour.py  base.py  bridge.py  computer.py  crafts.py  crew.py  drives.py  expense.py  habitation.py  hull.py  parts.py  sensors.py  ship.py  spec.py  storage.py  systems.py  text.py  weapons.py
tests/: __init__.py  conftest.py  output.py  test_armour.py  test_base.py  test_bridge.py  test_bridge_computer.py  test_computer.py  test_crafts.py  test_crew.py  test_drives.py  test_expense.py  test_habitation.py  test_hulls.py  test_parts.py  test_sensors.py  test_serialization.py  test_ship.py  test_spec.py  test_spec_to_markdown.py  test_storage.py  test_systems.py  test_weapons.py
tests/adapters/: test_travellermap.py
tests/approval/: snapshot.py
tests/character/: helpers.py  test_agent.py  test_aging.py  test_app.py  test_army.py  test_benefits.py  test_bulk.py  test_career_class.py  test_career_data.py  test_career_handler_base.py  test_career_identity.py  test_career_term_narrative.py  test_careers.py  test_character_summary.py  test_character_typing.py  test_citizen.py  test_cli.py  test_common_career_handlers.py  test_companion_precareers.py  test_connection_events.py  test_draft_domain.py  test_drifter.py  test_entertainer.py  test_event_base.py  test_events_pending_inputs.py  test_homeworld_events.py  test_navy.py  (+24 more)
tools/: check_unit_coverage.py  check_unit_coverage.sh  collapse_deps.py
(+1001 files in other folders)
