[project]
name = "ceres"
version = "0.1.0"
description = "GM aid for Mongoose Traveller 2nd edition"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "fastapi[standard]>=0.125.0",
    "jinja2>=3.1",
    "ollama>=0.6.2",
    "platformdirs>=4.5.1",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pyyaml>=6.0.3",
    "typer>=0.20.0",
    "typst>=0.14.8",
]
[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "httpx>=0.28.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py314"
fix = true

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "RUF005"]

[tool.ruff.lint.isort]
known-first-party = ["ceres"]
force-sort-within-sections = true
combine-as-imports = true

[tool.deptry]
exclude = ["tests", ".venv", "graphify-corpus"]
known_first_party = ["ceres"]

[tool.coverage.run]
source_pkgs = ["ceres"]

[tool.pytest.ini_options]
testpaths = ["tests"]
