[project]
name = "ceres"
version = "0.1.0"
description = "GM aid for Mongoose Traveller 2nd edition"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "fastapi[standard]>=0.125.0",
    "httpx>=0.28.0",
    "jinja2>=3.1",
    "ollama>=0.6.2",
    "platformdirs>=4.5.1",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "typer>=0.20.0",
    "typst>=0.14.8",
]
[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "httpx>=0.28.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py314"
fix = true

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
  "E", "F", "I", "UP",
  "B",      # bugbear
  "C4",     # comprehensions
  "SIM",    # simplify
  "RET",    # return hygiene
  "ARG001", # Only check function arguments 
  "PTH",    # pathlib
  "PL",     # pylint subset
  "RUF",    # ruff-specific
  "TRY",    # exception handling
  "PERF",   # performance
  "FURB",   # refurb
  "UP",     # upgrade
]
ignore = [
  "PLR0913",  # too many arguments; often noisy
  "RUF001",  # No, we don't just want ASCII
  "RUF002",  # No, we don't just want ASCII
  "RUF003",  # No, we don't just want ASCII
  "TRY003",  # more than 100 places to fix
]

[tool.ruff.lint.isort]
known-first-party = ["ceres"]
force-sort-within-sections = true
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"src/ceres/character/**/*.py" = [
  "ARG001",
  "E501",
  "PLC0415",
  "PLR0911",
  "PLR0912",
  "PLR0915",
  "PLR2004",
  "RUF012",  # Pydantic models: ruff can't trace cross-file BaseModel inheritance chains
]
"tests/**/*.py" = [
  "ARG001",  # pytest fixtures/hooks and helper signatures often keep unused parameters intentionally
  "PLC0415",  # tests often import locally to isolate dependencies and fixtures
  "PLR0915",  # reference tests are often long, literal checklists
  "PLR2004",  # expected values in tests are clearer as literals
]

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 12
max-statements = 50

[tool.deptry]
exclude = ["tests", ".venv", ".claude", "graphify-corpus"]
known_first_party = ["ceres"]

[tool.coverage.run]
source_pkgs = ["ceres"]

[tool.pytest.ini_options]
testpaths = ["tests"]
